# name: test_info
  <class 'dict'> {
    'bullets': <class 'list'> [
      <class 'dict'> {
        'body': 'Add some new feature.',
        'kind': 'add',
        'tags': <class 'list'> [
          '123',
          '!5',
        ],
      },
      <class 'dict'> {
        'body': 'Remove some old feature.',
        'kind': 'rm',
        'tags': <class 'list'> [
          '!6',
          'bc',
        ],
      },
    ],
    'config': <class 'dict'> {
      'command': 'info',
      'current_version': '0.2.0',
      'github_repo': 'https://github.com/bbugyi200/cldr',
      'infer_version_part': True,
      'jira_base_url': None,
      'jira_org': None,
      'logs': <class 'list'> [
      ],
      'verbose': 0,
    },
  }
---
# name: test_new[bullets0-args0]
  '
  * add(123,!5): Added some feature.
  
  '
---
# name: test_new[bullets1-args1]
  '
  * add(123,!5): Added some feature.
  * fix: Fixed some bug.
  
  '
---
# name: test_new[bullets2-args2]
  '
  * add(123,!5): Added some feature.
  * fix: Fixed some bug.
  * rm(bc): Removed some important feature.
  
  '
---
